codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_error_boolean_invalid.snap
---
source: tui/src/modes/mode_bar.rs
assertion_line: 978
expression: last
---
■ E3106 BooleanInvalid: flag=notbool
