codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_error_enum_mismatch.snap
---
source: tui/src/modes/mode_bar.rs
assertion_line: 934
expression: last
---
■ E3102 EnumMismatch: choice=c (allowed: a|b)
