codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_error_number_invalid.snap
---
source: tui/src/modes/mode_bar.rs
assertion_line: 1022
expression: last
---
■ E3107 NumberInvalid: num=abc
