codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_error_path_invalid.snap
---
source: tui/src/modes/mode_bar.rs
assertion_line: 1066
expression: last
---
■ E3108 PathInvalid: path=\u0001bad
