codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_inline_edit.snap
---
source: tui/src/modes/mode_bar.rs
expression: "render_lines(&view, 64)"
---
────────────────────────────────────────────────────────────────
Mode: [x] review · [ ] qa                                       
[target=staging_]                                               
════════════════════════════════════════════════════════════════
⏎ Apply  Esc Cancel
