codex-rs/tui/src/modes/snapshots/codex_tui__modes__mode_bar__tests__modebar_summary_and_vars.snap
---
source: tui/src/modes/mode_bar.rs
expression: "render_lines(&view, 64)"
---
────────────────────────────────────────────────────────────────
Mode: [x] review · [ ] qa                                       
[target=?]                                                      
════════════════════════════════════════════════════════════════
d Details  Tab Modes  ←→ Vars  ⏎ Edit  Space Toggle  Esc Exit
